# aichallenge_support_tools

tools/: .gitignore  README.md  evalwrap  run_tuning_gui.bash
tools/docs/: evalwrap_report_outputs_for_ros2_beginners.md  (+1 more)
tools/eval_wrapper/: README.md  pyproject.toml
tools/eval_wrapper/configs/: default.yaml  overtake_analysis.yaml  thresholds.yaml  topics.yaml
tools/eval_wrapper/evalwrap/: __init__.py  cli.py  collector.py  config.py  executor.py  reference_trajectory.py  run_manager.py  store.py
tools/eval_wrapper/evalwrap/analysis/: __init__.py
tools/eval_wrapper/evalwrap/analysis/overtake/: __init__.py  event_extractor.py  judgement.py  map_binning.py  metrics.py  opportunity_detector.py
tools/eval_wrapper/evalwrap/metrics/: __init__.py  control_metrics.py  event_detector.py  judgement.py  race_metrics.py
tools/eval_wrapper/evalwrap/parsers/: __init__.py  details_parser.py  log_parser.py  rosbag_parser.py  summary_parser.py
tools/eval_wrapper/evalwrap/reports/: __init__.py  compare_report.py  html_report.py  overtake_report.py
tools/eval_wrapper/evalwrap/utils/: __init__.py  fs_utils.py  git_utils.py  hash_utils.py  subprocess_utils.py
tools/eval_wrapper/tests/: test_cli_ingest.py  test_collector.py  test_details_parser.py  test_html_report.py  test_judgement.py  test_overtake_analysis.py  test_race_metrics.py  test_reference_trajectory.py  test_rosbag_parser.py  test_run_manager.py  test_store.py  test_summary_parser.py
tools/eval_wrapper/tests/fixtures/sample_output_latest/d1/: d1-result-details.json  result-summary.json
(+35 files in other folders)
